# python-auth-service

./: README.md  pyproject.toml
src/auth_service/: main.py
src/auth_service/core/configurations/: __init__.py  app.py  base.py  config.py  database.py  jwt.py  redis.py
src/auth_service/domain/: __init__.py
src/auth_service/domain/entities/: __init__.py  session.py  user.py
src/auth_service/domain/exceptions/: __init__.py  auth.py  session.py  token.py  user.py
src/auth_service/domain/repositories/: __init__.py  session_repository.py  user_repository.py
src/auth_service/domain/repositories/query/: __init__.py  filters.py  pagination.py  result.py  sort.py  update.py
src/auth_service/domain/services/: jwt_service.py  password_service.py
src/auth_service/domain/value_objects/: __init__.py  jti.py  jwt_payload.py  jwtpayload.py  password.py  session.py  session_id.py  token.py  token_pair.py  user_id.py  user_status.py  username.py
src/auth_service/infrastructure/: __init__.py  logging.py
src/auth_service/infrastructure/postgresql/: __init__.py
src/auth_service/infrastructure/postgresql/database/: __init__.py  database.py
src/auth_service/infrastructure/postgresql/database/models/: __init__.py  user.py
src/auth_service/infrastructure/postgresql/models/: user.py
src/auth_service/infrastructure/postgresql/repositories/: __init__.py  user_repository.py
src/auth_service/infrastructure/redis/: __init__.py  session_repository.py
src/auth_service/infrastructure/security/: __init__.py  jwt_service.py  password_service.py
